--- a/package.json
+++ b/package.json
@@ -1,23 +1,43 @@
 {
-  "name": "test",
+  "name": "vue-boilerplate",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "start": "nodemon dist/server.js",
+    "build": "webpack",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.21"
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "vee-validate": "^2.1.7",
+    "vue": "^2.6.6",
+    "vue-router": "^3.0.2",
+    "vue-server-renderer": "^2.6.6",
+    "webpack": "^4.29.5",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
     "@vue/cli-plugin-eslint": "^3.3.0",
     "@vue/cli-service": "^3.3.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.5.21"
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.18.10",
+    "vue-loader": "^15.6.4",
+    "vue-ssr-webpack-plugin": "^3.0.0",
+    "vue-template-compiler": "^2.6.6",
+    "webpack-cli": "^3.2.3"
   },
   "eslintConfig": {
     "root": true,
